fix post body spacing

--- a/assets/css/components/_components.scss
+++ b/assets/css/components/_components.scss
@@ -1,5 +1,13 @@
 .markdown {
-  p:not(:first-child):not(:last-child) {
-    margin: 2rem auto;
+  p {
+    margin: 1.5rem auto;
+  }
+
+  p:first-child {
+    margin-top: 0;
+  }
+
+  p:last-child {
+    margin-bottom: 0;
   }
 }
